@@ -1,0 +1,8 @@
+#!/bin/sh
+
+# Source tutorial run functions
+. $WM_PROJECT_DIR/bin/tools/RunFunctions
+
+rm -f log.* 0/theta
+rm -rf 1* 2* 3* 4* 5* 6* 7* 8* 9* constant/polyMesh
+rm -rf postProcessing infiltration.eps
